Update Report (Beta).

--- a/Report/report.tex
+++ b/Report/report.tex
@@ -1,106 +1,21 @@
-\href{\href{}{}}{}\documentclass[14pt]{extarticle} % Подключаем расширенный класс с поддержкой 14pt
-\usepackage[T2A]{fontenc}      % Кодировка для кириллицы
-\usepackage[utf8]{inputenc}     % Кодировка ввода UTF-8
-\usepackage[russian]{babel}     % Пакет для русского языка
+\documentclass[12pt]{article}
+\usepackage[utf8]{inputenc}
+\usepackage[russian]{babel}
+\usepackage[tbtags]{amsmath}
 \usepackage{amsmath}
-\usepackage{array}
-\usepackage{amsmath, amssymb} % Пакеты для математических символов
-\usepackage[a4paper, margin=1in]{geometry} % Настройка полей
-\setlength{\parindent}{0pt} % Убирает отступ в начале абзаца
+\usepackage{graphicx}
+\usepackage{mathtools}
+\usepackage{breqn}
 
-\usepackage{tocloft}
-\usepackage{titlesec}
-\usepackage{hyperref}
-\hypersetup{
-    colorlinks=false, % Отключаем цвет ссылок
-    hidelinks,        % Убираем рамки и цвета, делаем ссылки как обычный текст
-    pdfborder={0 0 0} % Полностью убираем рамки вокруг ссылок
-}
-
-\renewcommand{\contentsname}{Оглавление}
-
-\setlength{\cftbeforesecskip}{0pt}     % Убирает отступы между разделами
-\setlength{\cftbeforesubsecskip}{0pt}  % Убирает отступы между подразделами
-\setcounter{tocdepth}{2}
-
-% Настройка стиля заголовков
-\titleformat{\section}
-  {\normalfont\Large\bfseries}{\thesection}{1em}{}
-\titleformat{\subsection}
-  {\normalfont\large\bfseries}{\thesubsection}{1em}{}
-
-% Настройка точек в содержании для разделов и подразделов
-\renewcommand{\cftsecleader}{\cftdotfill{\cftdotsep}}     % Для разделов
-\renewcommand{\cftsubsecleader}{\cftdotfill{\cftdotsep}}  % Для подразделов
-
-% Установка обычного шрифта для разделов в содержании
-\renewcommand{\cftsecfont}{\normalfont}        % Обычный шрифт для разделов
-\renewcommand{\cftsecpagefont}{\normalfont}    % Обычный шрифт для номеров страниц разделов
-
-
+\pagestyle{plain}
 \begin{document}
 
-\linespread{1,5}
-% Первая страница (без номера)
-\thispagestyle{empty} % Убираем номер на первой странице
-\begin{titlepage}
-    \newpage
-    \begin{center}
-    {\bfseries Министерство образования и науки Российской Федерации \\
-    ВГУ}
-    \vspace{1cm}
-
-     Кафедра Технологий обработки и защиты информации
-     \vspace{2em}
-
-     \end{center}
-
-    \vspace{5em}
-
-    \begin{center}
-    \Large
-\textbf{Задание по дисциплине}
-
-\normalsize
-\textbf{«Математические Методы в Современных Информационных Технологиях»}
-
-(1 курс магистратуры ИСиТ, СПИИ, 2024-2025 уч. год.)
-
-Лобода А.В., Каверина В.К.
-     \end{center}
-    \vspace{5em}
-
-
-   \vbox{%
-\hfill%
-\vbox{%
-\hbox{\textbf{Выполнили:} магистранты 1 курса}%
-\hbox{направления «Информационные системы и технологии»}%
-\hbox{профиля «Системы прикладного искусственного интеллекта»}%
-\hbox{группы 15}%
-\hbox{Волченко Полина Владимировна}%
-\hbox{Смотрова Кристина Владимировна}%
-\hbox{}%
-}%
-}
-
-    \begin{center}
-    \vspace{10em}
-    2024
-    \end{center}
-
-    \end{titlepage}
-\newpage
-
-% Добавляем содержание
-\tableofcontents
-\newpage
-
-\section{Постановка задачи}
-
-Задание L1.16. \\
-
-Необходимо найти невырожденные 7-мерные орбиты в пространстве $ \mathbb{C}^4 $ (или показать их отсутствие) у 7-мерной алгебры Ли. В положительном случае, проинтегрировать алгебру Ли.
+\begin{center}
+\textbf{Отчет \\
+    \textit{Волченко П.В., Смотрова К.В.} \\
+    1 курс магистратуры, 15 группа \\
+    Варианты L1.16 и [7, [6,25], 1, 1]}
+\end{center}
 
 \begin{table}[h!]
     \centering
@@ -110,198 +25,64 @@
         \hline
         & $e_1$ & $e_2$ & $e_3$ & $e_4$ & $e_5$ & $e_6$ & $e_7$ \\
         \hline
-        $e_1$ & & $e_3$ & & & & & $e_1$ + $e_4$ \\
+        $e_1$ & $\cdot$ & $e_3$ & & & & & $e_1$ + $e_4$ \\
         \hline
-        $e_2$ & & & & & & $e_2$ & \\
+        $e_2$ & & $\cdot$ & & & & $e_2$ & \\
         \hline
-        $e_3$ & & & & & & $e_3$ & $e_3$\\
+        $e_3$ & & & $\cdot$ & & & $e_3$ & $e_3$\\
         \hline
-        $e_4$ & & & & & & & $e_4$ \\
+        $e_4$ & & & & $\cdot$ & & & $e_4$ \\
         \hline
-        $e_5$ & & & & & & $a$$e_5$ & $b$$e_5$\\
+        $e_5$ & & & & & $\cdot$ & $a$$e_5$ & $b$$e_5$\\
         \hline
-        $e_6$ & & & & & & & \\
+        $e_6$ & & & & & & $\cdot$ & \\
         \hline
-        $e_7$ & & & & & & & \\
+        $e_7$ & & & & & & & $\cdot$ \\
         \hline
     \end{tabular}
     \caption{Матрица коммутаторов полей}
 \end{table}
 
-\newpage
-\section{Проверка алгебры}
+Проверим равенство Якоби для всех сочетаний векторов. Оно выполняется, значит, представленный вариант является алгеброй. Найдем 4 базисных вектора, которые образуют абелеву подалгебру, и перейдем к рассмотрению 3 возможных случаев. \\
 
-Проверка абелевых алгебр условием Якоби необходима для определения интегрируемости системы уравнений. Тождества Якоби для структурных констант являются необходимым и достаточным условием интегрируемости этих уравнений. \\
+\textbf{1 базис}
+\begin{align*}
+e_2 &= (1,0,0,0) = \frac{\partial}{\partial z_1}, \\
+e_3 &= (0,1,0,0) = \frac{\partial}{\partial z_2}, \\
+e_4 &= (0,0,1,0) = \frac{\partial}{\partial z_3}, \\
+e_5 &= (0,0,0,1) = \frac{\partial}{\partial z_4}. 
+\end{align*}
 
-Для проверки возьмем комбинацию \(e_1, e_2\) и \(e_3:\) \\
+Вычислим в этом случае $e_1$:
+$$e_1 = (a_1(z_1,z_2,z_3,z_4), b_1(z_1,z_2,z_3,z_4), c_1(z_1,z_2,z_3,z_4), d_1(z_1,z_2,z_3,z_4)).$$ 
+\begin{align*}
+[e_2,e_1] &= e_2(e_1) - e_1(e_2) = \\
+&= \left(
+\frac{\partial a_1(z_1,z_2,z_3,z_4)}{\partial z_1}, 
+\frac{\partial b_1(z_1,z_2,z_3,z_4)}{\partial z_1}, 
+\frac{\partial c_1(z_1,z_2,z_3,z_4)}{\partial z_1},
+\frac{\partial d_1(z_1,z_2,z_3,z_4)}{\partial z_1}
+\right) = \\
+& = (0,-1,0,0);
+\end{align*}
+$$\Downarrow$$
+$$e_1 = (a_1(z_2,z_3,z_4), -z_1 + B_1, c_1(z_2,z_3,z_4), d_1(z_2,z_3,z_4)), \, B_2 \in C.$$
 
-[[e_1, e_2], e_3] + [[e_3, e_1], e_2] + [[e_2, e_3], e_1] = 0 \\
+Так как $[e_3,e_1] = 0, [e_4,e_1] = 0, [e_5,e_1] = 0$, можно сделать вывод, что $e_1$ не зависит от $z_2, z_3 \text{ и } z_4$, тогда: 
+$$e_1 = (A_1, z_1 + B_1, C_1, D_1), \, A_1, B_1, C_1, D_1 \in C.$$ 
 
-1)
-\[
- [[e_1, e_2], e_6]: \\
-\]
-\[
-[e_1, e_2] = e_3
-\]
-\[
-[e_3, e_3] = 0
-\] \\
+По аналогии вычислим $e_6 \text{ и } e_7$:
+\begin{align*}
+e_6 &= (z_1 + A_6, z_2 + B_6, C_6, az_4 + D_6), \, A_6, B_6, C_6, D_6 \in C; \\
+e_7 &= (A_7, z_2 + B_7, z_3 + C_7, bz_4 + D_7), \, A_7, B_7, C_7, D_7 \in C.
+\end{align*}
 
-2)
-\[
-[[e_3, e_1], e_2]: \\
-\]
-\[
-[e_3, e_1] = 0
-\]
-\[
-[0, e_2] = 0
-\] \\
-
-3)
-\[
-[[e_2, e_3], e_1]: \\
-\]
-\[
-[e_2, e_3] = 0
-\]
-\[
-[0, e_1] = 0
-\]
-
-\[
-0 + 0 + 0 = 0
-\]
-
-В следствии чего можем сделать вывод, что Тождеcтво Якоби выполняется. \\
-
-\\
-Дальнейшие проверки, оставшихся 34-х комбинаций, были сделаны с помощью программы на языке Python.
-\\
-
-В результате было получено, что все комбинации удовлетворяют условию Якоби.
-\newpage
-\section{Решение}
-Согласно лемме~[1], голоморфной заменой координат пространства $ \mathbb{C}^4 $ базис
-\( (e_2, e_3, e_4, e_5) \) из четырёх полей, образующих 4-мерную абелеву подалгебру, можно привести к одному из трёх видов:
-
-\begin{enumerate}
-    \item
-    \[
-    \begin{aligned}
-    e_1 &: (1, 0, 0, 0), \\
-    e_3 &: (0, 1, 0, 0), \\
-    e_4 &: (0, 0, 1, 0), \\
-    e_5 &: (0, 0, 0, 1).
-    \end{aligned}
-    \]
-
-    \item
-    \[
-    \begin{aligned}
-    e_2 &: (0, b_2(z_1), c_2(z_1), d_2(z_1)), \\
-    e_3 &: (0, 1, 0, 0), \\
-    e_4 &: (0, 0, 1, 0), \\
-    e_5 &: (0, 0, 0, 1).
-    \end{aligned}
-    \]
-
-    \item
-    \[
-    \begin{aligned}
-    e_2 &: (1, 0, 0, 0), \\
-    e_3 &: (0, 0, c_3(z_1), d_3(z_1)), \\
-    e_4 &: (0, 0, 1, 0), \\
-    e_5 &: (0, 0, 0, 1).
-    \end{aligned}
-    \]
-\end{enumerate}
-
-\subsection{Первый случай}
-
-Рассмотрим 1-й случай. Поля \( e_2, e_3, e_4, e_5 \) образуют абелеву подалгебру, так как их коммутаторы попарно между собой дают ноль. \\
-
-Поля \( e_2, e_3, e_4, e_5 \) выглядят следующим образом:
-\[
-e_2 = (1, 0, 0, 0) = \frac{\partial}{\partial z_1},
-\]
-\[
-e_3 = (0, 1, 0, 0) = \frac{\partial}{\partial z_2},
-\]
-\[
-e_4 = (0, 0, 1, 0) = \frac{\partial}{\partial z_3},
-\]
-\[
-e_5 = (0, 0, 0, 1) = \frac{\partial}{\partial z_4}.
-\]
-Для нахождения остальных полей (\( e_1, e_6, e_7 \)), рассмотрим коммутаторы между ними и полями из абелевой подалгебры, а также между собой. \\
-
-Сначала найдем поле $e_1$.\\
-\[
-[e_2, e_1] = -e_3;
-\]
-\[
-[e_3, e_1] = 0;
-\]
-\[
-[e_4, e_1] = 0;
-\]
-\[
-[e_5, e_1] = 0;
-\]\\
-Рассмотрим коммутатор $[e_2, e_1]$:\\
-\[
-[e_2, e_1] = -e_3 = (0, -1, 0, 0) = e_2(e_1) - e_1(e_2) =
-\]
-\[
-= 0 - e_1(e_2) = - e_1(e_2) = - \frac{\partial }{\partial z_2};
-\]
-
-\[
-\frac{\partial b_1}{\partial z_1} = -1 \implies b_1(z) = -z_1 + B_1.
-\]
-
-В остальных случаях поле $e_1$ не зависит от переменных $z_2, z_3, z_4$.\\
-Поле \( e_1 \) имеет следующий вид:
-\[
-\boldsymbol{e_1 = \big(A_1; -z_1 + B_1; C_1; D_1\big)}.
-\]
-По аналогии мы получим следующие коммутаторы:
-\[
-\boldsymbol{e_6 = (z_1 + A_6; z_2 + B_6; C_6; az_4 + D_6)}.
-\]
-\[
-\boldsymbol{e_7 = \big(A_7; z_2 + B_7; z_3 + C_7; bz_4 + D_7\big)}.
-\]
-Общий вид будет такой:
-\[
-e_1 = \big( A_1; -z_1 + B_1; C_1; D_1 \big)
-\]
-\[
-e_2 = \big( 1; 0; 0; 0 \big)
-\]
-\[
-e_3 = \big( 0; 1; 0; 0 \big)
-\]
-\[
-e_4 = \big( 0; 0; 1; 0 \big)
-\]
-\[
-e_5 = \big( 0; 0; 0; 1 \big)
-\]
-\[
-e_6 = \big( z_1 + A_6; z_2 + B_6; C_6; az_4 + D_6 \big)
-\]
-\[
-e_7 = \big( A_7; z_2 + B_7; z_3 + C_7; bz4 + D_7 \big)
-\]
-Далее рассмотрим следующий коммутатор.
+Выполним проверку полученных векторов:
 \[
 [e_1, e_6] = 0;
 \]
 \[
-[e_1, e_6] = (0, 0, 0, 0) = e_1(e_6) - e_6(e_1) =
+[e_1, e_6] = (0, 0, 0, 0) = e_1(e_6) - e_6(e_1) = 
 \]
 
 \[
@@ -330,12 +111,12 @@ aD_1 = 0
 Случай №1: $D_1 = 0$; \\
 Рассмотрим коммутатор $[e_6, e_7]$
 \[
-[e_6, e_7] = e_6(e_7) - e_7(e_6) =
+[e_6, e_7] = e_6(e_7) - e_7(e_6) = 
 \]
 \[
 = \left((z_2 + B_6) * \frac{\partial}{\partial z_2}\right)
 + \left(C_6 * \frac{\partial}{\partial z_3}\right)
-+ \left((az_4 + D_6) * b * \frac{\partial}{\partial z_4}\right) -
++ \left((az_4 + D_6) * b * \frac{\partial}{\partial z_4}\right) - 
 \]
 
 \[
@@ -360,9 +141,9 @@ A_7 = 0
 \end{cases}
 \]\\
 
-Далее рассмотрим коммутатор $[e_1, e_7]$:
+Далее рассмотрим коммутатор $[e_1, e_7]$: 
 \[
-[e_1, e_7] = e_1(e_7) - e_7(e_1) =
+[e_1, e_7] = e_1(e_7) - e_7(e_1) = 
 \]
 
 \[
@@ -393,13 +174,13 @@ C_1 = C_1 + 1;
 Получили \textbf{противоречие}.\\\\
 Рассмотрим случай №2: a = 0;
 \[
-[e_6, e_7] = e_6(e_7) - e_7(e_6) =
+[e_6, e_7] = e_6(e_7) - e_7(e_6) = 
 \]
 
 \[
 = \left( (z_2 + B_6) * \frac{\partial}{\partial z_2} \right)
 + \left( C_6 * \frac{\partial}{\partial z_3} \right)
-+ \left( bD_6 * \frac{\partial}{\partial z_4} \right) -
++ \left( bD_6 * \frac{\partial}{\partial z_4} \right) - 
 \]
 
 \[
@@ -428,7 +209,7 @@ A_7 = 0 \\
 Рассмотрим случай №2.1: b = 0; \\
 
 \[
-[e_1, e_7] = e_1(e_7) - e_7(e_1) =
+[e_1, e_7] = e_1(e_7) - e_7(e_1) = 
 \]
 
 \[
@@ -456,7 +237,7 @@ C_1 = C_1 + 1;
 Рассмотрим случай №2.2: $D_6 = 0$; \\
 
 \[
-[e_1, e_7] = e_1(e_7) - e_7(e_1) =
+[e_1, e_7] = e_1(e_7) - e_7(e_1) = 
 \]
 
 \[
@@ -480,100 +261,181 @@ C_1 = C_1 + 1;
 \[
 0 = 1;
 \]
-Получили \textbf{противоречие}.
-\subsection{Второй случай}
+Получили \textbf{противоречие}. \\
 
-Рассмотрим 2-й случай. Поля \( e_1, e_3, e_4, e_5 \) образуют абелеву подалгебру, так как их коммутаторы попарно между собой дают ноль. \\
+\textbf{2 базис} 
+\begin{align*}
+e_2 &= (0,b_2(z_1),c_2(z_1),d_2(z_1)), \\
+e_3 &= (0,1,0,0) = \frac{\partial}{\partial z_2}, \\
+e_4 &= (0,0,1,0) = \frac{\partial}{\partial z_3}, \\
+e_5 &= (0,0,0,1) = \frac{\partial}{\partial z_4}. 
+\end{align*}
 
-Поля \( e_2, e_3, e_4, e_5 \) выглядят следующим образом:
-\[
-e_2 = (0, b_2(z_1), c_2(z_1), d_2(z_1)),
-\]
-\[
-e_3 = (0, 1, 0, 0),
-\]
-\[
-e_4 = (0, 0, 1, 0),
-\]
-\[
-e_5 = (0, 0, 0, 1).
-\]
+Вычислим в этом случае $e_2$:
+$$e_2 = (a_2(z_1,z_2,z_3,z_4), b_2(z_1,z_2,z_3,z_4), c_2(z_1,z_2,z_3,z_4), d_2(z_1,z_2,z_3,z_4)).$$
 
-Для нахождения остальных полей (\( e_1, e_6, e_7 \)), рассмотрим коммутаторы между ними и полями из абелевой подалгебры, а также между собой. \\
+Так как $[e_3,e_2] = 0, [e_4,e_2] = 0, [e_5,e_2] = 0$, можно сделать вывод, что $e_2$ не зависит от $z_2, z_3 \text{ и } z_4$, тогда: 
+$$e_2 = (a_2(z_1), b_2(z_1), c_2(z_1), d_2(z_1)).$$ 
+\begin{align*}
+[e_1,e_2] &= e_1(e_2) - e_2(e_1) = \\
+&= 0 \cdot \left(
+\frac{\partial a_2(z_1)}{\partial z_1}, 
+\frac{\partial b_2(z_1)}{\partial z_1}, 
+\frac{\partial c_2(z_1)}{\partial z_1},
+\frac{\partial d_2(z_1)}{\partial z_1}
+\right) = (0,1,0,0);
+\end{align*}
+$$\Downarrow$$
 
-В результате чего мы получили такие поля:
-\[
-\boldsymbol{e_1 = \big( A_1e^{-z_1};\ B_1;\ -z_1 + C_1;\ D_1e^{(b - 1)z_1}\big);}
-\]
-\[
-\boldsymbol{e_2 = \big( 0; \frac{e^{z_1}}{A_1}; 0; 0\big);}
-\]
-\[
-\boldsymbol{e_3 = \big( 0; 1;\ 0;\ 0 \big);}
-\]
-\[
-\boldsymbol{e_4 = \big( 0; 0; 1; 0 \big);}
-\]
-\[
-\boldsymbol{e_5 = \big( 0; 0; 0; 1 \big);}
-\]
-\[
-\boldsymbol{e_6 = \big( 0;\ B_6;\ C_6;\ D_6 \big);}
-\]
-\[
-\boldsymbol{e_7 = \big( 1;\ z_2;\ z_3;\ bz_4 \big);}
-\]\\
-Как можно заметить, в данном случае получаем \textbf{вырождение}.
+0 = 1, получили противоречие. \\
 
-\subsection{Третий случай}
+\textbf{3 базис} 
+\begin{align*}
+e_2 &= (0,1,0,0) = \frac{\partial}{\partial z_2}, \\
+e_3 &= (0,0,c_3(z_1),d_3(z_1)), \\
+e_4 &= (0,0,1,0) = \frac{\partial}{\partial z_3}, \\
+e_5 &= (0,0,0,1) = \frac{\partial}{\partial z_4}. 
+\end{align*}
 
-Рассмотрим 3-й случай. Поля \( e_2, e_3, e_4, e_5 \) образуют абелеву подалгебру, так как их коммутаторы попарно между собой дают ноль. \\
+Вычислим в этом случае $e_2$:
+$$e_2 = (a_2(z_1,z_2,z_3,z_4), b_2(z_1,z_2,z_3,z_4), c_2(z_1,z_2,z_3,z_4), d_2(z_1,z_2,z_3,z_4)).$$
 
-Поля \( e_2, e_3, e_4, e_5 \) выглядят следующим образом:
-\[
-e_2 = (0, 1, 0, 0),
-\]
-\[
-e_3 = (0, 0, c_3(z_1), d_3(z_1)),
-\]
-\[
-e_4 = (0, 0, 1, 0),
-\]
-\[
-e_5 = (0, 0, 0, 1).
-\]
-Для нахождения остальных полей (\( e_1, e_6, e_7 \)), рассмотрим коммутаторы между ними и полями из абелевой подалгебры, а также между собой. \\
+Так как $[e_4,e_2] = 0 \text{ и } [e_5,e_2] = 0$, можно сделать вывод, что $e_2$ не зависит от $z_3 \text{ и } z_4$, тогда: 
+$$e_2 = (a_2(z_1, z_2), b_2(z_1, z_2), c_2(z_1, z_2), d_2(z_1, z_2)).$$ 
+\begin{align*}
+[e_1,e_2] &= e_1(e_2) - e_2(e_1) = \\
+&= \left(
+\frac{\partial a_2(z_1,z_2)}{\partial z_2}, 
+\frac{\partial b_2(z_1,z_2)}{\partial z_2}, 
+\frac{\partial c_2(z_1,z_2)}{\partial z_2}, 
+\frac{\partial d_2(z_1,z_2)}{\partial z_2}
+\right) = (0,0,c_3(z_1),d_3(z_1));
+\end{align*}
+$$\Downarrow$$
+$$e_2 = (a_2(z_1), b_2(z_1), c_3(z_1) \cdot z_2 + c_2(z_1), d_3(z_1) \cdot z_2 + d_2(z_1)).$$ 
+\begin{align*}
+[e_3,e_2] = e_3(e_2) - e_2(e_3) = -a_2(z_1)\left(0, 0, \frac{\partial c_3(z_1)}{\partial z_1}, \frac{\partial d_3(z_1)}{\partial z_1}\right) = 0;&
+\end{align*}
+$$\Downarrow$$
+$$
+\begin{dcases}
+\frac{\partial c_3(z_1)}{\partial z_1} = 0, \\
+\frac{\partial d_3(z_1)}{\partial z_1} = 0;
+\end{dcases} \quad \text{или} \quad a_2(z_1) = 0.$$
 
-В результате получаем следующие поля:\\
+Рассмотрим \textbf{первый случай}, где  
+$\begin{cases}
+\frac{\partial c_3(z_1)}{\partial z_1} = 0,\\
+\frac{\partial d_3(z_1)}{\partial z_1} = 0;
+\end{cases}$, тогда:
+\begin{align*}
+e_3 &= (0,0,C_3,D_3); \\
+e_2 &= (a_2(z_1), b_2(z_1), C_3 \cdot z_2 + c_2(z_1), D_3 \cdot z_2 + d_2(z_1));
+\end{align*}
 
-\[
-\boldsymbol{e_1 = \big( 0;\ B_1e^{z_1};\ C_1;\  -D_3e^{(a - 1)z_1}z_2 + D_1e^{-az_1}\big);}
-\]
-\[
-\boldsymbol{e_2 = \big( 0; 1; 0; 0\big);}
-\]
-\[
-\boldsymbol{e_3 = \big( 0; 0;\ 0;\ D_3e^{(a - 1)z_1} \big);}
-\]
-\[
-\boldsymbol{e_4 = \big( 0; 0; 1; 0 \big);}
-\]
-\[
-\boldsymbol{e_5 = \big( 0; 0; 0; 1 \big);}
-\]
-\[
-\boldsymbol{e_6 = \big( 1;\ z_2;\ 0;\ az_4 \big);}
-\]
-\[
-\boldsymbol{e_7 = \big( A_7;\ B_7e^{z_1};\ C_7;\ bz_4 + D_7e^{az_1} \big);}
-\]
+По аналогии вычислим $e_6$: 
+$$e_6 = (a_6(z_1), b_6(z_1), c_6(z_1), z_4 + d_6(z_1)).$$
 
-Как можно заметить, в данном случае также получаем \textbf{вырождение}.
+Вычислим $e_7$:
+$$e_7 = (a_7(z_1,z_2,z_3,z_4), b_7(z_1,z_2,z_3,z_4), c_7(z_1,z_2,z_3,z_4), d_7(z_1,z_2,z_3,z_4)).$$
 
-\newpage
-\section{Интегрирование алгебры $T [7, [6, 25], 1, 1]$}
+Так как $[e_4,e_7] = 0 \text{ и } [e_5,e_7] = 0$, можно сделать вывод, что $e_7$ не зависит от $z_3 \text{ и } z_4$, тогда: 
+$$e_7 = (a_7(z_1,z_2), b_7(z_1,z_2), c_7(z_1,z_2), d_7(z_1,z_2)).$$ 
+\begin{align*}
+[e_1,e_7] &= e_1(e_7) - e_7(e_1) = \\
+&= \left(
+\frac{\partial a_7(z_1,z_2)}{\partial z_2}, 
+\frac{\partial b_7(z_1,z_2)}{\partial z_2}, 
+\frac{\partial c_7(z_1,z_2)}{\partial z_2}, 
+\frac{\partial d_7(z_1,z_2)}{\partial z_2}\right) = (0, 0, 1, 0);
+\end{align*}
+$$\Downarrow$$
+$$e_7 = (a_7(z_1), b_7(z_1), z_2 + c_7(z_1), d_7(z_1)).$$ 
 
-Предложение 11. \textit{С точностью до локальных голоморфных преобразований лобальной реализации алгебры $T [7, [6, 25], 1, 1]$ в пространстве $\mathbb{C}^4$, удовлетворяющая условиям $A$ и $B$, имеет базис $\{e\}$}
+$$[e_3,e_7] = e_3(e_7) - e_7(e_3) = 0 = (0,0,C_3,D_3); \Rightarrow C_3 = 0, D_3 = 0; \Rightarrow e_3 = (0,0,0,0);$$
+$$\Downarrow$$
+
+Получаем противоречие, так как базисное поле не может быть нулевым. \\ 
+
+Рассмотрим \textbf{второй случай}, где $a_2(z_1) = 0$, тогда: 
+\begin{align*}
+e_3 &= (0,0,c_3(z_1),d_3(z_1)); \\
+e_2 &= (0, b_2(z_1), c_3(z_1) \cdot z_2 + c_2(z_1), d_3(z_1) \cdot z_2 + d_2(z_1));
+\end{align*}
+
+Вычислим в этом случае $e_6$:
+$$e_6 = (a_6(z_1,z_2,z_3,z_4), b_6(z_1,z_2,z_3,z_4), c_6(z_1,z_2,z_3,z_4), d_6(z_1,z_2,z_3,z_4)).$$
+
+Так как $[e_4,e_6] = 0 \text{ и } [e_5,e_6] = 0$, можно сделать вывод, что $e_6$ не зависит от $z_3 \text{ и } z_4$, тогда: 
+$$e_6 = (a_6(z_1,z_4), b_6(z_1,z_4), c_6(z_1,z_4), d_6(z_1,z_4)).$$ 
+\begin{align*}
+[e_5,e_6] &= e_5(e_6) - e_6(e_5) = \\
+&= \left(
+\frac{\partial a_6(z_1,z_4)}{\partial z_4}, 
+\frac{\partial b_6(z_1,z_4)}{\partial z_4}, 
+\frac{\partial c_6(z_1,z_4)}{\partial z_4}, 
+\frac{\partial d_6(z_1,z_4)}{\partial z_4}\right) = (0, 0, 0, 1);
+\end{align*}
+$$\Downarrow$$
+$$e_6 = (a_6(z_1), b_6(z_1), c_6(z_1), z_4 + d_6(z_1)).$$
+
+\begin{align*}
+[e_3,e_6] &= e_3(e_6) - e_6(e_3) = \\
+&= d_3(z_1)(0, 0, 0, 1) - a_6(z_1)\left(0,0,\frac{\partial c_3(z_1)}{\partial z_1}, \frac{\partial d_3(z_1)}{\partial z_1}\right) = 0;
+\end{align*}
+$$\Downarrow$$
+$$a_6(z_1) = 0 \quad \text{или} \quad \frac{\partial c_3(z_1)}{\partial z_1} = 0;$$
+
+Первый случай приводит к вырождению, так как $A_1 = A_2 = A_3 = A_4 = A_5 = A_6 = 0$ (получаем 6 нулей). Рассмотрим \textbf{второй случай}, где $\frac{\partial c_3(z_1)}{\partial z_1} = 0 \text{ и } \, a_6(z_1) \neq 0$. Так как $a_6(z_1) \neq 0$, воспользуемся леммой о линеаризации:
+$$\Downarrow$$
+\begin{align*}
+\frac{\partial d_3(z_1)}{\partial z_1} &= \frac{d_3(z_1)}{a_6(z_1)}; \\
+e_3 &= (0,0,C_3,d_3(z_1)); \\
+e_6 &= (a_6(z_1), b_6(z_1), c_6(z_1), z_4 + d_6(z_1)) = (1, 0, 0, z_4); \\ 
+e_2 &= (0, b_2(z_1), C_3 \cdot z_2 + c_2(z_1), d_3(z_1) \cdot z_2 + d_2(z_1)). 
+\end{align*}
+
+По аналогии вычислим $e_7$:
+$$e_7 = (a_7(z_1), b_7(z_1), z_2 + c_7(z_1), d_7(z_1)) = (-a_6(z_1), b_7(z_1), z_2 + c_7(z_1), d_7(z_1)).$$ 
+
+Таким образом, получаем:
+\begin{align*}
+a_6&(z_1) = -a_7(z_1) \neq 0, \\
+e_2 &= (0, b_2(z_1), c_2(z_1), d_3(z_1) \cdot z_2 + d_2(z_1)), \\
+e_6 &= (1, 0, 0, z_4), \\
+e_7 &= (-a_6(z_1), b_7(z_1), z_2 + c_7(z_1), d_7(z_1)). 
+\end{align*}
+
+Проверим тождества $[e_2,e_6] = 0, [e_2,e_7] = e_2, \text{ и } [e_6,e_7] = e_4.$ 
+\begin{align*}
+1) \,
+[e_2,e_6] &= e_2(e_6) - e_6(e_2) = \\
+&= (d_3(z_1) \cdot z_2 + d_2(z_1)) \cdot \left(0, 0, 0, \frac{\partial z_4}{\partial z_4}\right) - \\
+&- 1 \cdot \left(0, \frac{\partial b_2(z_1)}{\partial z_1}, \frac{\partial c_2(z_1)}{\partial z_1}, \frac{\partial (d_3(z_1) \cdot z_2 + d_2(z_1))}{\partial z_1}\right) = 0;
+\end{align*}
+$$\Downarrow$$
+\begin{align*}
+e_2 &= (0, B_2, C_2, d_3(z_1) \cdot z_2 + d_2(z_1)); \\ 
+e_6 &= (1, 0, 0, z_4); \\ 
+e_7 &= (-a_6(z_1), b_7(z_1), z_2 + c_7(z_1), d_7(z_1)). 
+\end{align*}
+\begin{align*}
+2) \,
+[e_2,e_7] &= e_2(e_7) - e_7(e_2) = \\
+&= B_2 \cdot \left(0, 0, \frac{\partial z_2}{\partial z_2}, 0\right)
++ a_6(z_1) \cdot \left(0, 0, 0, \frac{\partial (d_3(z_1) \cdot z_2 + d_2(z_1))}{\partial z_1}\right) -\\
+&- b_7(z_1) \cdot  (0,0,0,d_3(z_1)) = (0, B_2, C_2, d_3(z_1) \cdot z_2 + d_2(z_1));
+\end{align*}
+$$\Downarrow$$
+$$B_2 = C_2 = 0;$$
+$$b_7(z_1) = 0 \quad \text{или} \quad d_3(z_1) = 0;$$
+Первый случай приводит к вырождению, так как $B_2 = B_3 = B_4 = B_5 = B_6 = B_7 = 0$ (получаем 6 нулей), а второй — к противоречию (так как базисное поле не может быть нулевым).\\
+
+\begin{center}
+\textbf{Задание [7, [6,25], 1, 1]}
+\end{center}
+
+С точностью до локальных голоморфных преобразований реализация в $\mathbb{C}^4$ 7-мерной алгебры [7, [6,25], 1, 1], содержащей ниль-радикал $N_{[6,25]}$, обязана иметь следующий базис:
 
 \begin{table}[h!]
     \centering
@@ -583,133 +445,82 @@ e_5 = (0, 0, 0, 1).
         \hline
     & $e_1$ & $e_2$ & $e_3$ & $e_4$ & $e_5$ & $e_6$ & $e_7$ \\
         \hline
-        $e_1$ & & & & & & & $3e_1 + ae_2$\\
+        $e_1$ & $\cdot$ & & & & & & $3e_1 + ae_2$\\
         \hline
-        $e_2$ & & & & & & & $-ae_1+3e_2$\\
+        $e_2$ & & $\cdot$ & & & & & $-ae_1+3e_2$\\
         \hline
-        $e_3$ & & & & & $e_2$ & $e_1$ & $2e_3$\\
+        $e_3$ & & & $\cdot$ & & $e_2$ & $e_1$ & $2e_3$\\
         \hline
-        $e_4$ & & & & & $-e_1$ & $e_2$ & $2e_4$ \\
+        $e_4$ & & & & $\cdot$ & $-e_1$ & $e_2$ & $2e_4$ \\
         \hline
-        $e_5$ & & & & & & $e_4$ & $e_5-ae_6$ \\
+        $e_5$ & & & & & $\cdot$ & $e_4$ & $e_5-ae_6$ \\
         \hline
-        $e_6$ & & & & & & & $ae_5+ae_6$ \\
+        $e_6$ & & & & & & $\cdot$ & $ae_5+ae_6$ \\
         \hline
-        $e_7$ & & & & & & & \\
+        $e_7$ & & & & & & & $\cdot$ \\
         \hline
     \end{tabular}
-    \caption{Матрица коммутаторов полей алгебры $T [7[6,20],1,1]$}
+    \caption{Матрица коммутаторов полей алгебры $T [7[6,25],1,1]$}
 \end{table}
 
+Проверим равенство Якоби для всех сочетаний векторов. Оно выпол-
+няется, значит, представленный вариант является алгеброй.\\
 
+Полученные поля данной алгебры выглядят так:
+\begin{align*}
+e_1 &= (0,0,0,1), \\
+e_2 &= (0,0,1,0), \\
+e_3 &= (0,1,0,0),\\
+e_4 &= (0, i \varepsilon, i \varepsilon z_1, z_1), \\
+e_5 &= (1, 0, z_2, 0), \\
+e_6 &= (i \varepsilon, i \varepsilon z_1, i \varepsilon z_1^2, z_2 + (1/2)z_1^2), \\
+e_7 &= ((1 - i m \varepsilon) z_1, 2 z_2 - (1/2) i m \varepsilon z_1^2, 3 z_3 + m z_4 - \frac{i}{m} \varepsilon z_1^3, m z_3 + 3 z_4 - (1/6) m z_1^3). 
+\end{align*} 
 
-\subsection{Проверка алгебры}
+После чего мы проверяем поля на то, что они были получены правильно. Для этого коммутируем их между собой и сравниваем с матрицей. \\
 
-Для проверки возьмем комбинацию \(e_1, e_2\) и \(e_6:\) \\
+Рассмотрим коммутатор $[e_6, e_7] = me_5 + e_6 = (m + i \varepsilon, i \varepsilon z_1, i \varepsilon z_1^2 + mz_2, z_2 + (1/2)z_1^2)$. \\
 
-[[e_1, e_2], e_6] + [[e_2, e_6], e_1] + [[e_6, e_1], e_2] = 0 \\
+При коммутировании полученных полей мы получили такой результат: \\
 
-1)
-\[
- [[e_1, e_2], e_6]: \\
-\]
-\[
-[e_1, e_2] = 0
-\]
-\[
-[0, e_6] = 0
-\] \\
+$[e6, e7] = \left(i \varepsilon + m \varepsilon^2, i \varepsilon z_1, \frac{3 \varepsilon^2 z_1}{m} + i \varepsilon z_1^2 + m z_2 + \frac{m z_1^2}{2} - 2 m \varepsilon^2 z_1^2, z_2 + (1/2)z_1^2 \right)$. \\
 
-2)
-\[
-[[e_2, e_6], e_1]: \\
-\]
-\[
-[e_2, e_6] = 0
-\]
-\[
-[0, e_6] = 0
-\] \\
+Если принять $\varepsilon^2 = 1$, то мы получим следующее: \\
 
-3)
-\[
-[[e_6, e_1], e_2]: \\
-\]
-\[
-[e_6, e_1] = 0
-\]
-\[
-[0, e_2] = 0
-\]
+$[e6, e7] = \left(i \varepsilon + m, i \varepsilon z_1, \frac{3 z_1}{m} + i \varepsilon z_1^2 + m z_2 - \frac{3m z_1^2}{2}, z_2 + (1/2)z_1^2 \right)$. \\
 
-Из полученных решений получаем следующий итог:
-\[
-0 + 0 + 0 = 0
-\]
+Полученный результат не сходится с результатом коммутатора матрицы. Это гласит о том, что в полях была допущена ошибка. \\
 
-В следствии чего можем сделать вывод, что Тождество Якоби выполняется. \\
-\\
-Дальнейшие проверки оставшихся 34-х комбинаций были сделаны с помощью программы на языке Python.
-\\
+Мы попробовали изменить поле $e_7$ следующим образом: перенести $m$ из знаменателя в числитель и сделать его равным нулю. \\
 
-В результате было получено, что все комбинации удовлетворяют условию Якоби.
+Тогда поле станет выглядеть так: $e_7 = (z_1, 2z_2, 3z_3, 3z_4).$ \\
 
-\subsection{Решение}
+Тогда $[e_6, e_7] = me_5 + e_6 = e_6 = \left(i \varepsilon, i \varepsilon z_1, i \varepsilon z_1^2, z_2 + (1/2)z_1^2 \right).$ \\
 
-Искомая функция от восьми вещественных \(\Phi(x_1,x_2,x_3,x_4,y_1,y_2,y_3,y_4)\), должна подчиняться условию[5]:\newline
-Вещественная гиперповерхность
-\(M=\lbrace{\Phi=0}\rbrace\) является орбитой
-(интегральной поверхностью) голоморфной реализации алгебры Ли \(g\) ,
-если для каждого базисного поля этой алгебры выполняется условие
-касания \(M\) в виде
-\[
-\mathfrak{Re}\lbrace{e_k(\Phi)|_M\rbrace}=0
-\]\newline
+Остальные коммутаторы, в которых присутствует поле $e_7$ останутся правильными. \\
 
-Также важна формула:
-\[
-\frac{\partial\Phi}{\partial z_k}=\frac{1}{2}(\frac{\partial\Phi}{\partial x_k}- i\frac{\partial\Phi}{\partial y_k})
-\]\newline
+Для проверки коммутаторов и тождеств Якоби по полям были написаны программы на Maple: \\
 
-Поля алгебры Ли  [7, [6, 25],1, 1]: \\
+- V1_DEFAULT_COMMUTATORS.mw — с исходными полями; \\
 
-$e_1 = (0, 0, 0, 1)$, \\
+- V2_COMMUTATORS_M_IN_NUMERATOR.mw — в поле $e_7$ перенесли $m$ из знаменателя в числитель; \\
 
-$e_2 = (0, 0, 1, 0)$, \\
+- V3_COMMUTATORS_M_IN_NUMERATOR_AND_ZERO.mw — в поле $e_7$ перенесли $m$ из знаменателя в числитель и приравняли к 0; \\
 
-$e_3 = (0, 1, 0, 0)$, \\
-
-$e_4 = (0, i \varepsilon, i \varepsilon z_1, z_1)$, \\
-
-$e_5 = (1, 0, z_2, 0)$, \\
-
-$e_6 = \left( i \varepsilon, i \varepsilon z_1, i \varepsilon z_1^2, z_2 + (1/2)z_1^2 \right)$, \\
-
-$e_7 = \left( (1 - i m \varepsilon) z_1, 2 z_2 - (1/2) i m \varepsilon z_1^2, 3 z_3 + m z_4 - \frac{i}{m} \varepsilon z_1^3, m z_3 + 3 z_4 - (1/6) m z_1^3 \right)$.\\
-
-Варинта решения будет представлен программным решением среды Maple. Исходный код и решеним представлено в приложении B.
-
-\newpage
-\phantomsection % Создает точку привязки для правильной работы ссылок
-\addcontentsline{toc}{section}{Список использованных источников}
+\pagebreak
 \begin{center}
-    \Large \textbf{Список использованных источников}
+\textbf{Список использованной литературы}
 \end{center}
 
-\begin{enumerate}
-    \item https://edu.vsu.ru/mod/resource/view.php?id=1009551
-    \item Parry А.R. A Classification of Real Indecomposable Solvable Lie Algebras of Small Dimension with Codimension One Nilradicals// Master’s thesis "--- Logan, Utah, 2007
+1. Крутских В. В., Лобода А. В. Компьютерные алгоритмы реализации 7-мерных алгебр Ли // Материалы Международной научно-технической конференции «Актуальные проблемы прикладной математики, информатики и механики». Воронеж: ПМИМ ВГУ, 2022.
 
-    \item {\it Vu~A. L., Nguyen~T. A., Nguyen~T. T. C., Nguyen~T. T. M., Vo~T. N.} Classification of 7-dimensional solvable Lie algebras having 5-dimensional nilradicals// Communications in Algebra. 2023. Vol. 51, № 5. P. 1866--1885.
+2. Лобода А. В., Атанов А. В., Албуткина П. Е. Об алгоритмах описания однородных подмногообразий многомерных пространств // Материалы XXVI международной научно-практической конференции ИПМТ. Воронеж, 2024. С. 380–391.
 
-\end{enumerate}
-\newpage
-\begin{center}
-    \Large \textbf{Приложение А}
-\end{center}
-\newpage
-\begin{center}
-    \Large \textbf{Приложение В}
-\end{center}
+3. Атанов А. В. Орбиты разложимых 7-мерных алгебр Ли с sl(2)-подалгеброй // Уфимский математический журнал. 2022. Т. 14, № 1.
 
+4. Акопян Р. С., Лобода А. В. О голоморфных реализациях пятимерных алгебр Ли // Алгебра и анализ. 2019. Т. 31, № 6. С. 1–37. 
+
+5. Vu A. L., Nguyen T. A., Nguyen T. T. C., Nguyen T. T. M., Vo T. N. Classification of 7-dimensional solvable Lie algebras having 5-dimensional nilradicals // Communications in Algebra. 2023. Т. 51, № 5. С. 1866–1885.
+
+6. Parry A. R. A Classification of Real Indecomposable Solvable Lie Algebras of Small Dimension with Codimension One Nilradicals // Магистерская диссертация. Логан, Юта, 2007.
 \end{document}
